# djaodjin-extended-templates

./: .gitignore  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
extended_templates/: __init__.py  backends.py  compat.py  decorators.py  eml.py  extras.py  helpers.py  mixins.py  models.py  pdf.py  settings.py  signals.py  themes.py  thread_locals.py  utils.py
extended_templates/api/: assets.py  less_variables.py  serializers.py  sources.py  themes.py  upload_media.py
extended_templates/backends/: __init__.py  base.py  eml.py  pdf.py  s3.py
extended_templates/management/commands/: list_css_classes.py
extended_templates/static/js/: djaodjin-code-editor.js  djaodjin-editor.js  djaodjin-panel-buttons.js  djaodjin-resources.js  djaodjin-sidebar-gallery.js  djaodjin-style-editor.js  djaodjin-themes-vue.js  djaodjin-themes.js  djaodjin-upload.js
extended_templates/templates/django/: _field.html  _form.html
extended_templates/templates/extended_templates/: _body_bottom.html  _body_bottom_edit_tools.html  _edit_tools.html  edit.html  theme.html
extended_templates/templates/jinja2/: _form.html  _form_fields.html
extended_templates/urls/: __init__.py
extended_templates/urls/api/: __init__.py  assets.py  edittools.py  templates.py  themes.py
extended_templates/urls/views/: __init__.py  themes.py
extended_templates/views/: pages.py  static.py  themes.py
src/: podofo-flatform.cc
testsite/: jinja2.py  package.json  requirements-legacy.txt  requirements.txt  settings.py  urls.py  views.py  wsgi.py
testsite/etc/: credentials  credentials.conf  gunicorn.conf
testsite/fixtures/: default-db.json
testsite/management/commands/: sendtestemail.py
testsite/templates/: base.eml  base.html  index.html  testemail.eml
testsite/templates/accounts/: login.html
